Fix for misaligned emoji

--- a/stylesheets/_blog.scss
+++ b/stylesheets/_blog.scss
@@ -134,6 +134,7 @@
 	display: inline-block;
 	max-width: 28px;
 	max-height: 28px;
+	margin: 0;
 	margin-bottom: -.25em;
 }
 
